    - New --quiet command-line option to suppress the default console log.
      Good in combination with --hash-password.
    - Authorities send back an X-Descriptor-Not-New header in response to
      an accepted-but-discarded descriptor upload.  Partially implements
      fix for bug 535.
    - Make the "not enough dir info yet" message better.

  o Minor features (bridges):
    - If bridge users set UpdateBridgesFromAuthority, but the digest
      they ask for is a 404 from the bridge authority, they now fall
      back to trying the bridge directly.
    - Bridges now use begin_dir to publish their server descriptor to
      the bridge authority, even when they haven't set TunnelDirConns.

  o Minor features (controller):
    - When reporting clock skew, and we only have a lower bound on
      the amount of skew, amount anyway, marked as a lower bound.
      [XXX Nick: what does this mean??]

  o Utilities:
    - Update linux-tor-prio.sh script to allow QoS based on the uid of
      the Tor process. Patch from Marco Bonetti with tweaks from Mike
      Perry.

  o Minor bugfixes:
    - Refuse to start if both ORPort and UseBridges are set. Bugfix
      on 0.2.0.x.
    - Better log message on vote from unknown authority.
    - Don't log "Launching 0 request for 0 router".

  o Minor bugfixes (memory leaks):
    - Stop leaking memory every time we parse a v3 certificate. Bugfix
      on 0.2.0.1-alpha.
    - Stop leaking memory every time we load a v3 certificate. Bugfix
      on 0.2.0.1-alpha.  Fixes Bug 536
    - Stop leaking a cached networkstatus on exit.  Bugfix on
      0.2.0.3-alpha.
    - Stop leaking voter information every time we free a consensus.
      Bugfix on 0.2.0.3-alpha.
    - Stop leaking signed data every time we check a voter signature.
      Bugfix on 0.2.0.3-alpha.
    - Stop leaking a signature every time we fail to parse a consensus or
      a vote.  Bugfix on 0.2.0.3-alpha.
    - Stop leaking v2_download_status_map on shutdown.  Bugfix on